# l4d2-internal-base

./: .gitignore  CMakeLists.txt
.github/workflows/: msbuild-cmake.yml  msbuild-rebase.yml  msbuild-test.yml  msbuild.yml
src/: DllMain.cpp  l4d2_base.vcxproj  l4d2_base.vcxproj.filters
src/Client/: None.cpp  None.h
src/Client/Engine/Prediction/: EnginePrediction.cpp  EnginePrediction.h
src/Client/FileManager/: FileManager.cpp  FileManager.h
src/Client/ModuleManager/: ModuleManager.cpp  ModuleManager.h
src/Client/ModuleManager/Module/: ModuleCatagory.h  ModuleCategory.h  ModuleHeader.cpp  ModuleHeader.h
src/Client/ModuleManager/Module/Modules/Combat/: Aimbot.cpp  Aimbot.h  NoSpread.cpp  NoSpread.h
src/Client/ModuleManager/Module/Modules/Combat/Aimbot/: Aimbot.cpp  Aimbot.h
src/Client/ModuleManager/Module/Modules/Combat/AutoShoot/: AutoShoot.cpp  AutoShoot.h
src/Client/ModuleManager/Module/Modules/Combat/FastMelee/: FastMelee.cpp  FastMelee.h
src/Client/ModuleManager/Module/Modules/Misc/FontManager/: FontManager.h
src/Client/ModuleManager/Module/Modules/Player/: BunnyHop.cpp  BunnyHop.h
src/Client/ModuleManager/Module/Modules/Player/BhopModes/: NormalBhop.cpp  NormalBhop.h
src/Client/ModuleManager/Module/Modules/Render/: Arraylist.cpp  Arraylist.h  ESPHelper.cpp  ESPHelper.h
src/Client/ModuleManager/Module/Modules/Render/ClickGui/: ClickGuiModule.cpp  ClickGuiModule.h
src/Client/ModuleManager/Module/Modules/Render/Rotation/: Rotations.h
src/Client/ModuleManager/Module/Modules/Render/ThirdPerson/: ThirdPerson.cpp  ThirdPerson.h
src/Client/ModuleManager/Module/Utils/: UtilsCollector.cpp  UtilsCollector.h
src/Client/ModuleManager/Module/Utils/EntityCache/: EntityCache.cpp  EntityCache.h
src/Client/Rotation/: Rotation.h  RotationManager.cpp  RotationManager.h
src/Client/Ui/: Menu.cpp  Menu.h  MouseUtils.cpp  MouseUtils.h  gui.cpp  gui.h
src/Client/Ui/components/: CategoryUI.cpp  CategoryUI.h
src/Client/Value/: Value.h  ValueManager.cpp  ValueManager.h
src/Client/Value/Values/: BooleanValue.h  ColorValue.h  FloatRangeValue.h  FloatValue.h  ListValue.h  NumberValue.h  StringValue.h
src/Entry/: Entry.cpp  Entry.h
src/Features/: Client.cpp  Client.h
src/Features/EnginePrediction/: EnginePrediction.h
src/Features/File/: FileManager.cpp  FileManager.h
src/Features/Manager/: Manager.cpp  Manager.h  RotationManager.cpp  RotationManager.h
src/Features/Manager/Module/: ModuleHeader.h
src/Features/Manager/Module/Modules/Combat/: Aimbot.cpp  Aimbot1.cpp  NoSpread.cpp  NoSpread.h  NoSpread1.cpp
src/Features/Manager/Module/Modules/Combat/AutoShoot/: AutoShoot.cpp  AutoShoot.h
src/Features/Manager/Module/Modules/Combat/FastMelee/: FastMelee.cpp  FastMelee.h
src/Features/Manager/Module/Modules/Player/: BunnyHop.cpp  BunnyHop.h
src/Features/Manager/Module/Modules/Render/: Arraylist.cpp  Arraylist.h  ESPHelper.cpp
src/Features/Manager/Module/Utils/: FindTarget.cpp  UtilsCollector.cpp  UtilsCollector.h
src/Features/Value/: ValueManager.h
src/Features/Value/Values/: BooleanValue.h
src/Hooks/: Hooks.cpp  Hooks.h
src/Hooks/BaseClient/: BaseClient.cpp
src/Hooks/BasePlayer/: BasePlayer.cpp
src/Hooks/CL_Main/: CL_Main.cpp
src/Hooks/ClientMode/: ClientMode.cpp  ClientMode.h
src/Hooks/EngineVGui/: EngineVGui.cpp  EngineVGui.h
src/Hooks/SequenceTransitioner/: SequenceTransitioner.cpp
src/Hooks/TerrorPlayer/: TerrorPlayer.cpp
src/Hooks/VGuiSurface/: VGuiSurface.cpp  VGuiSurface.h
src/Hooks/WindowHook/: WindowHook.cpp  WindowHook.h
src/Hooks/WndProc/: WndProc.cpp
src/SDK/DrawManager/: DrawManager.cpp  DrawManager.h
src/SDK/L4D2/Entities/: C_BaseAnimating.h  C_BaseEntity.h  C_TerrorPlayer.h  C_TerrorWeapon.h
src/SDK/L4D2/Includes/: const.h  utlvector.h
src/SDK/L4D2/Interfaces/: BaseClientDLL.h  CVar.h  EngineTrace.h  IInput.h  VGuiInput.h  VGuiPanel.h  VGuiSurface.h
src/Util/Hook/MinHook/: MinHook.h  buffer.c  hook.c  trampoline.c
src/Util/Hook/MinHook/hde/: pstdint.h
src/Util/Json/: json.hpp
src/Util/Math/: Math.h
src/Util/Math/Vector/: Vector.h
src/Util/Offsets/: Offsets.cpp  Offsets.h
